[tool.poetry]
name = "example_app"
version = "1.0.0"
description = ""
authors = ["Khosbayar Sandag <ksandag@sorenson.com>"]
readme = "README.md"
packages = [{include = "example_app"}]

homepage = "https://github.com/khosbayar-sorenson/gh-actions-poetry"
repository = "https://github.com/khosbayar-sorenson/gh-actions-poetry"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.23.3"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"


[tool.poetry.group.lint.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.2.0"

[tool.isort]
profile = "black"

[tool.mypy]
# 3rd party import
ignore_missing_imports = true
# dynamic typing
disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = true
disallow_any_generics = false
disallow_subclassing_any = true
# platform
python_version = "3.10"
# untyped
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
# None and Optional
no_implicit_optional = true
# Warnings
warn_return_any = false
warn_unreachable = true
# Misc
pretty = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
